Fix spacing and hover

--- a/css/main.css
+++ b/css/main.css
@@ -8,15 +8,66 @@ html {
   box-sizing: inherit;
 }
 
-h2{
-  font-family: Dosis, sans-serif;
+.link-card {
+  display: block;
   color: #512200;
-  font-size: 1.5rem;
 }
 
 body {
   background-color: #dcd4cd;
   border: 3px solid #9a816d;
+  border-radius: 3px;
   font-family: Georgia, serif;
   padding: 1rem;
+  font-size: 1rem;
+}
+
+.link-card h2 {
+  font-family: Dosis, sans-serif;
+  color: #512200;
+  font-size: 1.5rem;
+  margin: 0;
+  font-weight: bold;
+}
+
+a {
+  text-decoration: none;
+}
+
+p {
+  display: inline-block;
+}
+
+dl {
+  display: inline-block;
+  font-size: .875rem;
+  border-top: 2px solid #9a816d;
+  border-bottom: 2px solid #9a816d;
+  text-decoration: none;
+  padding: 1rem;
+}
+
+dd {
+  font-style: italic;
+}
+
+.btn {
+  font-family: Dosis, sans-serif;
+  display: inline-block;
+  padding: .4em .75em .5em;
+  color: #dcd4cd;
+  background-color: #785439;
+  font-size: 1.125rem;
+  border-radius: 8px;
+  text-decoration: none;
+  border: 2px solid #785439;
+  font-weight: bold;
+}
+
+div {
+  text-align: center;
+}
+
+.link-card:hover {
+  background-color: #cabdb2;
 }
